--- a/markdown.css
+++ b/markdown.css
@@ -14,7 +14,7 @@ blockquote p {
     margin: 0.5em 0;
 }
 
-pre, blockquote {
+pre, blockquote, table {
     page-break-inside: avoid;
 }
 code {
@@ -40,4 +40,29 @@ h4 {
     font-weight: normal;
 }
 
+table {
+    min-width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+}
 
+table td, table th {
+    border: 1px solid black;
+}
+
+img, figure, figcaption {
+    display: block;
+    max-width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+/* apps */
+.app {
+    background-color: #ddd;
+    color: #000;
+}
+
+.entry {
+    background-color: #fff;
+}
